welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:4: error: not found: value yellow
while(x==yellow) { avance();}
         ^