welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.code
var x:String="getCouleursol()"
getCouleurSol()
while(x==yellow) { avance();}
